@@ -9,15 +9,11 @@ export LDFLAGS:=$(shell dpkg-buildflags --get LDFLAGS)
 LDFLAGS+=-Wl,--as-needed
 
 %:
-	dh $@
+	dh $@ --with=gir
 
 override_dh_autoreconf:
 	gtkdocize
 	dh_autoreconf
-
-override_dh_shlibdeps:
-	dh_shlibdeps
-	dh_girepository -l src:debian/libaccountsservice-dev/usr/share/gir-1.0
 
 override_dh_makeshlibs:
 	dh_makeshlibs -V -- -c4
