@@ -15,6 +15,8 @@ accountsservice (0.6.43-1) UNRELEASED; urgency=medium
   * Unconditionally install language-tools.
   * debhelper enables autoreconf, systemd and parallel builds by default
     in compat 10, no need to set those anymore.
+  * debian/rules: Don't call dh_girepository directly. Use dh gir sequence
+    instead.
 
  -- Emilio Pozuelo Monfort <pochu@debian.org>  Thu, 29 Dec 2016 10:32:46 +0100
 
